# ai-desktop-assistant

./: .env.example  .gitignore  AGENTS.md  README.md  TODO.md  eslint.config.js  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts  vitest.config.ts
.opencode/.agents/skills/tauri-desktop-app/: SKILL.md
docs/: PRD.md
docs/dev/: 01-tech-stack.md  02-project-structure.md  03-development-guide.md  04-api-design.md  05-modules.md  06-deployment.md  07-skills.md  README.md
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src-tauri/src/commands/: app.rs  file.rs  knowledge.rs  mod.rs  system.rs
src-tauri/src/models/: knowledge.rs  mod.rs
src-tauri/src/services/: embedding.rs  knowledge_db.rs  mod.rs
src/components/avatar/: Avatar.tsx
src/components/chat/: ChatWindow.tsx  ConversationItem.tsx  InputBar.tsx  KnowledgeBaseSelector.tsx  MessageItem.tsx  MessageList.tsx  index.ts
src/components/common/: MarkdownRenderer.tsx  WakeUpAnimation.tsx  index.ts
src/components/control/: AppLauncher.tsx  Breadcrumb.tsx  BrowserControl.tsx  FileList.tsx  FileManager.tsx  index.ts
src/components/knowledge/: DocumentList.tsx  KnowledgeBaseList.tsx  KnowledgePage.tsx  UploadZone.tsx  index.ts
src/components/pet/: DesktopPet.tsx  index.ts
src/components/settings/: AvatarSettings.tsx  GeneralSettings.tsx  ModelSettings.tsx  PetSettings.tsx  SettingsLayout.tsx  SettingsPage.tsx  ShortcutSettings.tsx  VoiceSettings.tsx  index.ts
src/components/ui/: ConfirmDialog.tsx  Toast.tsx  button.tsx  index.ts  input.tsx
src/components/voice/: VoiceInput.tsx
src/hooks/: index.ts  useChat.ts  useFileManager.ts  useKnowledge.ts  useVoice.ts
src/lib/: avatars.ts  constants.ts  export.ts  providers.ts  utils.ts
src/pages/: PetWindow.tsx
src/services/ai/: index.ts  openai.ts  types.ts
src/services/api/: knowledge.ts  tauri.ts
src/services/voice/: index.ts  webSpeech.ts
src/stores/: chatStore.ts  index.ts  knowledgeStore.ts  settingsStore.ts
src/types/: chat.ts  control.ts  index.ts  knowledge.ts  settings.ts
tests/unit/: InputBar.test.tsx  MessageItem.test.tsx  chatStore.test.ts  utils.test.ts
