[package]
name = "ai-desktop-assistant"
version = "0.1.0"
description = "AI桌面助手 - 全能型AI生活助手"
authors = ["AI Desktop Assistant Team"]
license = "MIT"
repository = "https://github.com/dameng321/ai-desktop-assistant"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-fs = "2"

# 异步运行时
tokio = { version = "1", features = ["full"] }

# 日期时间
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# 错误处理
thiserror = "1.0"
anyhow = "1.0"

# 系统信息
sys-info = "0.9"
hostname = "0.4"
dirs = "5"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_System_Threading",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_Storage_FileSystem",
] }
