[package]
name = "ai-desktop-assistant"
version = "0.1.0"
description = "AI桌面助手 - 全能型AI生活助手"
authors = ["AI Desktop Assistant Team"]
license = "MIT"
repository = "https://github.com/dameng321/ai-desktop-assistant"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-fs = "2"
tauri-plugin-global-shortcut = "2"

# 异步运行时
tokio = { version = "1", features = ["full"] }

# 日期时间
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# 错误处理
thiserror = "1.0"
anyhow = "1.0"

# 系统信息
sys-info = "0.9"
hostname = "0.4"
dirs = "5"

# HTTP 客户端
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"

# 文档解析
pdf-extract = "0.7"
lopdf = "0.34"
docx-rs = "0.4"

# 正则表达式
regex = "1.10"

# 数据库
rusqlite = { version = "0.32", features = ["bundled"] }

# 向量计算
ndarray = "0.16"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_System_Threading",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_Storage_FileSystem",
] }
